Edit article 2025-08-10-main-method-evolution.md